--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,8 @@ body {
 	color:#ffffff;
 }
 
+.hide{display:none !important;}
+
 div.content.windowMain {
 	display:none;
 	/*
@@ -125,30 +127,64 @@ div.thermometers .last-update {
 div.thermometers .label.humedad1,div.thermometers .label.humedad2{ font-size:30px;}
 div.thermometers .label.humedad1 img,div.thermometers .label.humedad2 img{ width:30px;height:30px;}
 
+div.statusBar{position: absolute;top:0;left:0;bottom:0;	}
+div.statusBar .menu i{font-size:42px;}
+div.statusBar i{font-size:30px;margin:5px 5px 0 5px;}
+div.statusBar .runing i{
+	animation-name: spin;
+	animation-duration: 2000ms;
+	animation-iteration-count: infinite;
+	animation-timing-function: linear;
+}
+
+@keyframes spin {
+	from { 
+		transform: rotate(0deg); 
+	} to { 
+		transform: rotate(59deg); 
+	}
+}
+
 button.btn{ width:200px; height:60px;}
 button.btnSmall{ width:50px; height:40px;}
 button.btn i{font-size:32px;}
+
+div.mainMenu{
+	position:absolute;
+	z-index:100;
+	top:0;
+	left:0;
+	bottom:0;
+	background:#f3f3f3;
+	width:200px;
+	display:none;
+}
+div.mainMenu button{font-size:20px;}
 
 button.btnToMain{ position:absolute;top:0;right:0;}
 button.btnRefreshApp{ position:absolute;bottom:0;right:0;}
 button.btnHaltApp{ position:absolute;bottom:0;left:0;}
 
-div.tempAjust.dia{ position:absolute;top:80px;left:100px;width:200px;}
-div.tempAjust.noche{ position:absolute;top:80px;left:350px;width:200px;}
-div.tempAjust input[type=number]{ width:200px; height:60px;font-size:32px;text-align:center;border:0;}/*position:absolute;top:120px;left:100px;*/
-	
+div.tempAjust.dia{ position:absolute;top:10px;left:100px;width:200px;}
+div.tempAjust.noche{ position:absolute;top:10px;left:350px;width:200px;}
+div.tempAjust input[type=number]{ width:200px; height:60px;font-size:32px;text-align:center;border:0;}
+div.tempAjust label i{font-size:30px;margin-bottom:10px;}
+
+/*position:absolute;top:120px;left:100px;*/
 /*button.btnUp{ position:absolute;top:60px;left:100px;}
-button.btnDown{ position:absolute;top:180px;left:100px;}*/
+/*button.btnDown{ position:absolute;top:180px;left:100px;}*/
 
-div.dayAjust{	position:absolute;top:300px;left:0;right:0;height:60px;}
-/*div.dayAjust.noche{	position:absolute;top:300px;left:0;right:0;height:60px;}*/
-div.dayAjust button.btnDay{width:80px;height:80px;font-size:22px}
+div.dayAjust{	position:absolute;top:320px;left:0;right:0;height:60px;}
+div.dayAjust button.btnDay{border:1px solid #fff;width:80px;height:80px;font-size:22px;background-color:transparent;color:#fff;}
+div.dayAjust button.btnDay:active{background-color:#666 !important;}
+div.dayAjust button.btnDay.active{background-color:#f3f3f3;color:#000;}
 
-div.date{width:100%;font-size:36px;font-family: 'Dosis';}
+div.date{ width:100%;font-size:36px;font-family: 'Dosis';}
 div.date span.hour{font-size:70px;display:inline-block;width:240px;padding-left:0;text-align:left;}
 div.date span.date{text-align:center;}
 
-div.hourAjust{ position:absolute;top:280px;left:0;right:0;height:60px;}
+div.hourAjust{ position:absolute;top:260px;left:0;right:0;height:60px;}
 div.hourAjust .lineHour{float:left;margin:0 1px 0 0;padding:10px 0;display:inline-block;border:1px solid #fff;}
-div.hourAjust .lineHour.dia{ background:#f3f3f3;color:#000;}
+div.hourAjust .lineHour:active{background-color:#666 !important;}
+div.hourAjust .lineHour.day{ background-color:#f3f3f3;color:#000;}
 	
