Add cgi-bin script to get temperature Change img to icons in humidity Best mobile view (force max size)

--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,13 @@ body {
 
 .hide{display:none !important;}
 
+div.all{
+	position:relative;
+	max-width:750px;
+	max-height:450px;
+	margin:0 auto;
+}
+
 div.content.windowMain {
 	display:none;
 	/*
